unpackaged/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>International High School Student</fullName>
            </value>
            <value>
                <fullName>High School Guidance Counselor</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Community College Advisor</fullName>
            </value>
            <value>
                <fullName>High School Administrator</fullName>
            </value>
            <value>
                <fullName>Independent Educational Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>