unpackaged/main/default/objects/Account/fields/ACT__c.field-meta.xml
<CustomField>
    <fullName>ACT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACT</label>
    <type>Checkbox</type>
</CustomField>