unpackaged/main/default/objects/Account/fields/Application_CSV_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_CSV_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/spreadsheets/d/&quot;+ Application_Template_Id__c, &quot;Application Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application CSV Link</label>
    <type>Text</type>
</CustomField>