unpackaged/main/default/objects/Account/fields/Application_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Template_Id__c</fullName>
    <label>Application Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>