unpackaged/main/default/objects/Account/fields/Bridge_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Channel_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bridge Channel Partner</label>
    <type>Checkbox</type>
</CustomField>