unpackaged/main/default/objects/Account/fields/Campus_Groups_Last_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Campus_Groups_Last_Logged_In__c</fullName>
    <label>Campus Groups Last Logged In</label>
    <type>DateTime</type>
</CustomField>