unpackaged/main/default/objects/Account/fields/CampusGroups_Id__c.field-meta.xml
<CustomField>
    <fullName>CampusGroups_Id__c</fullName>
    <externalId>true</externalId>
    <label>CampusGroups Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>