unpackaged/main/default/objects/Account/fields/CampusGroups_Status__c.field-meta.xml
<CustomField>
    <fullName>CampusGroups_Status__c</fullName>
    <label>CampusGroups Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Account Created</fullName>
                <default>true</default>
                <label>No Account Created</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>