unpackaged/main/default/objects/Account/fields/CEEB_Code__c.field-meta.xml
<CustomField>
    <fullName>CEEB_Code__c</fullName>
    <label>CEEB Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>