unpackaged/main/default/objects/Account/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this University participates in Channel Enrollments with Verto.</inlineHelpText>
    <label>Guaranteed Channel Partner</label>
    <type>Checkbox</type>
</CustomField>