unpackaged/main/default/objects/Account/fields/Channel_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Source_Type__c</fullName>
    <description>Represents the type of source the channel student was referred to Verto as. &quot;Bridge&quot; represents students who were denied admission to the channel partner school and aren&#39;t guaranteed a path to attend that school after Verto.</description>
    <label>Channel Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>