unpackaged/main/default/objects/Account/fields/Check_High_School_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Check_High_School_Transcript__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High School Transcript</label>
    <type>Checkbox</type>
</CustomField>