unpackaged/main/default/objects/Account/fields/College_Planning_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>College_Planning_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College Planning Form Complete?</label>
    <type>Checkbox</type>
</CustomField>