unpackaged/main/default/objects/Account/fields/College_Planning_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>College_Planning_Form_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://formstack.io/458BC&quot;, &quot;College Planning Form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College Planning Form Link</label>
    <type>Text</type>
</CustomField>