unpackaged/main/default/objects/Account/fields/Commitment_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commitment Form Complete?</label>
    <type>Checkbox</type>
</CustomField>