unpackaged/main/default/objects/Account/fields/Commitment_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Form_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://vertoeducation.formstack.com/forms/commitment_form?accId=&quot;&amp;Id , &quot;Commitment Form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Form Link</label>
    <type>Text</type>
</CustomField>