unpackaged/main/default/objects/Account/fields/Common_Application__c.field-meta.xml
<CustomField>
    <fullName>Common_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common Application</label>
    <type>Checkbox</type>
</CustomField>