unpackaged/main/default/objects/Account/fields/Contact_ID_Unique__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_Unique__c</fullName>
    <label>z_Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>