unpackaged/main/default/objects/Account/fields/Conversion_Flag__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Conversion Flag</label>
    <type>Checkbox</type>
</CustomField>