unpackaged/main/default/objects/Account/fields/Counseling__c.field-meta.xml
<CustomField>
    <fullName>Counseling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counseling</label>
    <referenceTo>Counseling__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>