unpackaged/main/default/objects/Account/fields/Counseling_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Counseling_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counseling Trigger</label>
    <type>Checkbox</type>
</CustomField>