unpackaged/main/default/objects/Account/fields/Counselor_Letter_of_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Letter_of_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counselor Letter of Recommendation</label>
    <type>Checkbox</type>
</CustomField>