unpackaged/main/default/objects/Account/fields/Course_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Course_Requirements__c</fullName>
    <inlineHelpText>What are the partner university&#39;s requirements with regards to minimum/maximum number of credits or courses a student may take during a semester.</inlineHelpText>
    <label>Course Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>