unpackaged/main/default/objects/Account/fields/CSS_Profile__c.field-meta.xml
<CustomField>
    <fullName>CSS_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSS Profile</label>
    <type>Checkbox</type>
</CustomField>