unpackaged/main/default/objects/Account/fields/D1_Letter_of_Recommendation_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>D1_Letter_of_Recommendation_Submitted_On__c</fullName>
    <label>1 Letter of Recommendation Submitted On</label>
    <type>Date</type>
</CustomField>