unpackaged/main/default/objects/Account/fields/D_500_Word_Writing_Sample_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>D_500_Word_Writing_Sample_Submitted_On__c</fullName>
    <label>500 Word Writing Sample Submitted On</label>
    <type>Date</type>
</CustomField>