unpackaged/main/default/objects/Account/fields/Department_Role__c.field-meta.xml
<CustomField>
    <fullName>Department_Role__c</fullName>
    <label>Department Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>