unpackaged/main/default/objects/Account/fields/Enrollment_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if an Academic Partner has sent their Enrollment Letters to their students.</description>
    <label>Enrollment Letter Sent</label>
    <type>Checkbox</type>
</CustomField>