unpackaged/main/default/objects/Account/fields/Essay__c.field-meta.xml
<CustomField>
    <fullName>Essay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Essay</label>
    <type>Checkbox</type>
</CustomField>