unpackaged/main/default/objects/Account/fields/FAFSA__c.field-meta.xml
<CustomField>
    <fullName>FAFSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAFSA</label>
    <type>Checkbox</type>
</CustomField>