unpackaged/main/default/objects/Account/fields/First_Text_Message_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Text_Message_Date_Time__c</fullName>
    <description>The date and time of the first text message (from lead creation)</description>
    <inlineHelpText>The date and time of the first text message (from lead creation)</inlineHelpText>
    <label>First Text Message Date/Time</label>
    <type>DateTime</type>
</CustomField>