unpackaged/main/default/objects/Account/fields/Gender_Details__c.field-meta.xml
<CustomField>
    <fullName>Gender_Details__c</fullName>
    <label>Gender Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>