unpackaged/main/default/objects/Account/fields/High_School_Import__c.field-meta.xml
<CustomField>
    <fullName>High_School_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High School Import</label>
    <type>Checkbox</type>
</CustomField>