unpackaged/main/default/objects/Account/fields/Hispanic_or_Latino_a_x__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_or_Latino_a_x__c</fullName>
    <label>Hispanic or Latino/a/x</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>