unpackaged/main/default/objects/Account/fields/Imported_From_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Imported_From_HubSpot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this record was migrated from HubSpot</description>
    <label>Imported From HubSpot</label>
    <type>Checkbox</type>
</CustomField>