unpackaged/main/default/objects/Account/fields/Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level__c</fullName>
    <label>z_Interest Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>