unpackaged/main/default/objects/Account/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview</label>
    <type>Checkbox</type>
</CustomField>