unpackaged/main/default/objects/Account/fields/Legacy_box_backfill__c.field-meta.xml
<CustomField>
    <fullName>Legacy_box_backfill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Legacy_box_backfill</label>
    <type>Checkbox</type>
</CustomField>