unpackaged/main/default/objects/Account/fields/Logged_into_Campus_Groups__c.field-meta.xml
<CustomField>
    <fullName>Logged_into_Campus_Groups__c</fullName>
    <formula>NOT(ISBLANK(Campus_Groups_Last_Logged_In__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged into Campus Groups?</label>
    <type>Checkbox</type>
</CustomField>