unpackaged/main/default/objects/Account/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major</label>
    <type>Checkbox</type>
</CustomField>