unpackaged/main/default/objects/Account/fields/Minimum_GPA__c.field-meta.xml
<CustomField>
    <fullName>Minimum_GPA__c</fullName>
    <label>Minimum GPA</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>