unpackaged/main/default/objects/Account/fields/Number_of_College_Applications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_College_Applications__c</fullName>
    <label>Number of College Applications</label>
    <summaryForeignKey>College_Application__c.University__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>