unpackaged/main/default/objects/Account/fields/Number_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Opportunities__c</fullName>
    <label>Number of Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>