unpackaged/main/default/objects/Account/fields/Number_of_Partner_Accepted_Applications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Partner_Accepted_Applications__c</fullName>
    <label>Number of Partner Accepted Applications</label>
    <summaryFilterItems>
        <field>College_Application__c.University_Decision__c</field>
        <operation>equals</operation>
        <value>Accept</value>
    </summaryFilterItems>
    <summaryForeignKey>College_Application__c.University__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>