unpackaged/main/default/objects/Account/fields/Number_of_Submitted_College_Apps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Submitted_College_Apps__c</fullName>
    <label>Number of Submitted College Apps</label>
    <summaryFilterItems>
        <field>College_Application__c.Application_Status__c</field>
        <operation>equals</operation>
        <value>Sent to University</value>
    </summaryFilterItems>
    <summaryForeignKey>College_Application__c.University__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>