unpackaged/main/default/objects/Account/fields/Number_of_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Won_Opportunities__c</fullName>
    <description>This field was created to support college counseling reporting.</description>
    <label>Number of Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>