unpackaged/main/default/objects/Account/fields/Official_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Official_Transcript__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Official Transcript</label>
    <type>Checkbox</type>
</CustomField>