unpackaged/main/default/objects/Account/fields/Other_Letter_of_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Other_Letter_of_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Letter of Recommendation</label>
    <type>Checkbox</type>
</CustomField>