unpackaged/main/default/objects/Account/fields/Partner_Essay_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Partner_Essay_Prompt__c</fullName>
    <label>Partner Essay Prompt</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>