unpackaged/main/default/objects/Account/fields/Partner_Statement_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Partner_Statement_of_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Statement of Interest</label>
    <type>Checkbox</type>
</CustomField>