unpackaged/main/default/objects/Account/fields/Partner_University_Application__c.field-meta.xml
<CustomField>
    <fullName>Partner_University_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner University Application</label>
    <type>Checkbox</type>
</CustomField>