unpackaged/main/default/objects/Account/fields/Passport_Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Passport_Full_Legal_Name__c</fullName>
    <label>Passport Full Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>