unpackaged/main/default/objects/Account/fields/Passport_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Date__c</fullName>
    <description>Stores the date the student&#39;s passport was issued.</description>
    <label>Passport Issue Date</label>
    <type>Date</type>
</CustomField>