unpackaged/main/default/objects/Account/fields/Passport_Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issuing_Country__c</fullName>
    <label>Passport Issuing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>