unpackaged/main/default/objects/Account/fields/Passport_Sex__c.field-meta.xml
<CustomField>
    <fullName>Passport_Sex__c</fullName>
    <label>Passport Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>