unpackaged/main/default/objects/Account/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>US High School Student</fullName>
            </value>
            <value>
                <fullName>International High School Student</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>High School Guidance Counselor</fullName>
            </value>
            <value>
                <fullName>Independent Educational Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>