unpackaged/main/default/objects/Account/fields/Post_Verto_Plans__c.field-meta.xml
<CustomField>
    <fullName>Post_Verto_Plans__c</fullName>
    <label>Post-Verto Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Post_Verto_Plans</valueSetName>
    </valueSet>
</CustomField>