unpackaged/main/default/objects/Account/fields/Preferred_Comunication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Comunication__c</fullName>
    <label>z_Preferred Comunication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>