unpackaged/main/default/objects/Account/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <description>The first name that the student prefers to be called, e.g. a nickname</description>
    <label>Preferred First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>