unpackaged/main/default/objects/Account/fields/Proficient_Languages__c.field-meta.xml
<CustomField>
    <fullName>Proficient_Languages__c</fullName>
    <label>z_Proficient Languages</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>