unpackaged/main/default/objects/Account/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <description>The student&#39;s pronouns</description>
    <label>Pronouns</label>
    <length>50</length>
    <type>Text</type>
</CustomField>