unpackaged/main/default/objects/Account/fields/Registered_for_Courses__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_Courses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered for Courses?</label>
    <type>Checkbox</type>
</CustomField>