unpackaged/main/default/objects/Account/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>z_Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>