unpackaged/main/default/objects/Account/fields/SAT__c.field-meta.xml
<CustomField>
    <fullName>SAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAT</label>
    <type>Checkbox</type>
</CustomField>