unpackaged/main/default/objects/Account/fields/School_Application__c.field-meta.xml
<CustomField>
    <fullName>School_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Application</label>
    <type>Checkbox</type>
</CustomField>