unpackaged/main/default/objects/Account/fields/School_of_Record__c.field-meta.xml
<CustomField>
    <fullName>School_of_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School of Record</label>
    <type>Checkbox</type>
</CustomField>