unpackaged/main/default/objects/Account/fields/School_Profile__c.field-meta.xml
<CustomField>
    <fullName>School_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Profile</label>
    <type>Checkbox</type>
</CustomField>