unpackaged/main/default/objects/Account/fields/Senior_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Senior_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Schedule</label>
    <type>Checkbox</type>
</CustomField>