unpackaged/main/default/objects/Account/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <description>The student&#39;s sex</description>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>