unpackaged/main/default/objects/Account/fields/SF_ID18_Acct__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_Acct__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_ID18_Acct</label>
    <type>Text</type>
</CustomField>