unpackaged/main/default/objects/Account/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>This is the Source used for Channel Enrollments on Lead import.  It is used in automation to find the account using this link.</description>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>