unpackaged/main/default/objects/Account/fields/string_collaborators__c.field-meta.xml
<CustomField>
    <fullName>string_collaborators__c</fullName>
    <label>z_string_collaborators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>