unpackaged/main/default/objects/Account/fields/Submit_Documents_Form__c.field-meta.xml
<CustomField>
    <fullName>Submit_Documents_Form__c</fullName>
    <inlineHelpText>This field is automatically populated from FormStack with a custom URL for a student to submit documents to ensure it&#39;s associated with the Opportunity.</inlineHelpText>
    <label>Submit Documents Form</label>
    <type>Url</type>
</CustomField>