unpackaged/main/default/objects/Account/fields/Teacher_Letter_of_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Letter_of_Recommendation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Teacher Letter of Recommendation</label>
    <type>Checkbox</type>
</CustomField>