unpackaged/main/default/objects/Account/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <inlineHelpText>To update the time zone make sure the Country is United States and simply update the zip code in the Billing Address and the time zone will update too.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Zone</valueSetName>
    </valueSet>
</CustomField>