unpackaged/main/default/objects/Account/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transcript</label>
    <type>Checkbox</type>
</CustomField>