unpackaged/main/default/objects/Account/fields/Transfer_Application__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Application</label>
    <type>Checkbox</type>
</CustomField>