unpackaged/main/default/objects/Account/fields/UNH_Id__c.field-meta.xml
<CustomField>
    <fullName>UNH_Id__c</fullName>
    <label>UNH Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>